UI: Live stream fixed with issue, User feed title overlap
UI: Live stream fixed with issue, User feed title overlap

--- a/LMS.App/ClientApp/src/styles.css
+++ b/LMS.App/ClientApp/src/styles.css
@@ -3183,6 +3183,9 @@ p-autocomplete li:before {
     margin-left: 300px;
     height: 800px;
   }
+  .list-schol-profile .schoolgrid-header h2 {
+    margin-right: 120px;
+}
 }
 
 @media screen and (min-width: 1281px) {
